@@ -73,10 +73,26 @@ var CloudCmd, Util, DOM, JsDiff, ace;
                     exec    : function (pEditor) {
                         var lCurrent    = DOM.getCurrentFile(),
                             lPath       = DOM.getCurrentPath(lCurrent),
-                            lValue      = Ace.getValue();
+                            lName       = DOM.getCurrentName(lCurrent),
+                            lValue      = Ace.getValue(),
+                            lLength     = lValue.length;
                         
-                        DOM.setCurrentSize( lValue.length, lCurrent );
-                        DOM.RESTfull.save( lPath,  lValue );
+                        DOM.setCurrentSize( lLength, lCurrent );
+                        
+                        diff(lName, lValue, function(pDiff) {
+                            var lData,
+                                lPatch      = '',
+                                lDiffLength = pDiff.length;
+                            
+                            if (lDiffLength >= lLength)
+                                lData   = lValue;
+                            else {
+                                lData   = pDiff;
+                                lPatch  = '?patch';
+                            }
+                            
+                            DOM.RESTfull.save( lPath,  lData, null, lPatch);
+                        }); 
                     }
                 });
             }
@@ -112,16 +128,13 @@ var CloudCmd, Util, DOM, JsDiff, ace;
             Ace.moveCursorTo(0, 0);
         }
         
-        this.diff                       = function(pName){
-            var lName       = DOM.getCurrentName(),
-                lNewValue   = Ace.getValue();
-            
+        function diff(pName, pNewValue, pCallBack){            
             DOM.jsload('/lib/util/jsdiff/diff.js', function(){
-                var lPatch = JsDiff.createPatch(lName, Value, lNewValue);
+                var lPatch  = JsDiff.createPatch(pName, Value, pNewValue);
                 
-                Util.log(lPatch);
+                Util.exec(pCallBack, lPatch);
             });
-        };
+        }
         
         function load(pCallBack){
             Util.time(Name + ' load');
