@@ -77,7 +77,7 @@
     
     /* we can not use librequare here */
     exports.util        = Util              = require(LIBDIR + UTIL),
-    exports.diff                            = mrequire(LIBDIR + UTIL + '/jsdiff/diff').JsDiff,
+    exports.diff                            = mrequire(LIBDIR + UTIL + '/jsdiff/diff'),
     
     exports.zlib        = zlib              = mrequire('zlib'),
     
